--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 						-->
 						<footer>
 							<ul class="icons">
-								<li><a href="https://twitter.com/taiger0o" class="icon brands fa-twitter">Twitter</a></li>
+								<li><a href="" class="icon brands fa-twitter">Twitter</a></li>
 								<li><a href="https://Instagram.com/a.gabous" class="icon brands fa-instagram">Instagram</a></li>
-								<li><a href="http://imtaiger.com/facebook" class="icon brands fa-facebook-f">Facebook</a></li>
+								<li><a href="" class="icon brands fa-facebook-f">Facebook</a></li>
 							</ul>
 						</footer>
 					</section>
