--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Abdullah Gabous</title>
+		<title>Mohammed Noor</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,7 +21,7 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-							<h1>Abdullah</h1>
+							<h1>Moahmmed</h1>
 							<p>MAKE THE WORLD YOUR WEAPON</p>
 							<a href="mailto:a@agabous.com">help</a>
 						</header>
@@ -74,7 +74,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; Abdullah</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Moahmmed</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
