--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Unisanda Links</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <style>
 :root {
   --maroon:#5b222b;
@@ -57,6 +58,7 @@ body {
 .hamburger.active::before{transform:rotate(45deg)}
 .hamburger.active::after{transform:rotate(-45deg)}
 
+
 /* ==== Drawer ==== */
 .drawer {
   position:fixed;inset:0 auto 0 0;width:75%;max-width:320px;
@@ -73,6 +75,25 @@ body {
 }
 .scrim.show {opacity:1;pointer-events:auto;}
 
+/* ==== Dark mode toggle button ==== */
+.dark-toggle {
+  position: fixed;
+  top: 14px;
+  right: 14px;
+  z-index: 50;
+  width: 42px;
+  height: 42px;
+  font-size: 22px;
+  color: var(--maroon);
+  background: #fff8;
+  border: none;
+  border-radius: 8px;
+  backdrop-filter: blur(6px);
+  cursor: pointer;
+  transition: transform .3s ease, background .3s ease;
+}
+.dark-toggle:hover { transform: scale(1.1); }
+
 /* ==== Hero (Circular Header with Dynamic Gradient) ==== */
 .hero {
   text-align:center;
@@ -80,16 +101,33 @@ body {
   background-size:300% 300%;
   animation:gradientShift 18s ease infinite;
   color:#fff;
-  padding:120px 16px 120px;
+  padding:1px 16px 90px; /* reduced height */
   position:relative;
   overflow:hidden;
-  border-bottom-left-radius:50% 15%;
-  border-bottom-right-radius:50% 15%;
+  border-bottom-left-radius:45% 12%;
+  border-bottom-right-radius:45% 12%;
 }
-@keyframes gradientShift {
-  0%{background-position:0% 50%;}
-  50%{background-position:100% 50%;}
-  100%{background-position:0% 50%;}
+
+/* Add this 👇 */
+.hero::before {
+  content:"";
+  position:absolute;
+  inset:0;
+  background:url('https://unisanda.com/images/Background%20PNG.png') center/cover no-repeat;
+  opacity:0.25; /* adjust 0.1–0.4 to control visibility */
+  animation:linesMove 120s linear infinite;
+  z-index:0;
+}
+
+.hero * {
+  position:relative;
+  z-index:1; /* keep logo, text, etc. above the lines */
+}
+
+@keyframes linesMove {
+  0% { background-position: center; }
+  50% { background-position: 50% 52%; }
+  100% { background-position: center; }
 }
 .hero::after {
   content:"";
@@ -99,10 +137,12 @@ body {
 
 /* ==== Floating Logo with Glow Pulse ==== */
 .logo {
-  width:120px;height:120px;margin:0 auto 8px;position:relative;
-  animation:float 6s ease-in-out infinite, logoGlow 12s ease-in-out infinite;
-  border-radius:50%;
-  box-shadow:0 0 40px 8px rgba(255,140,190,0.3);
+  width:240px;
+  height:240px;
+  margin:0 auto 8px;
+  position:relative;
+  animation:float 5s ease-in-out infinite;
+}
 }
 @keyframes logoGlow {
   0%,100%{box-shadow:0 0 40px 8px rgba(255,140,190,0.25);}
@@ -115,10 +155,13 @@ body {
   animation:hornFlash 8s infinite;
 }
 .logo::after {
-  content:"";position:absolute;inset:-20px;
-  background:radial-gradient(circle at 50% 0%,rgba(255,150,200,.3),transparent 60%);
+  content:"";
+  position:absolute;
+  inset:-20px;
+  background:radial-gradient(circle at 50% 0%, rgba(255,62,208,0.45), transparent 70%);
   animation:pulse 5s ease-in-out infinite;
   border-radius:50%;
+  filter:blur(20px);
 }
 @keyframes float {
   0%,100%{transform:translateY(0)}
@@ -147,7 +190,7 @@ h2 {color:var(--maroon);font-size:22px;margin:12px 0}
   border-radius:3px;opacity:.35;
 }
 a.link-btn {
-  display:block;padding:14px;margin:18px 0;
+  display:block;padding:14px;margin:25px 0;
   background: linear-gradient(160deg, var(--maroon) 0%, #712f3a 100%);
   color:#fff;border-radius:28px;
   text-decoration:none;font-weight:800;letter-spacing:.06em;
@@ -155,6 +198,22 @@ a.link-btn {
   opacity:0;transform:translateY(30px);
   animation:fadeUp .6s ease forwards;
   transition: transform .15s ease, box-shadow .2s ease, filter .3s ease;
+}
+.link-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px; /* space between icon and text */
+}
+
+.link-btn i {
+  font-size: 18px;
+  color: #fff;
+  transition: transform 0.2s ease;
+}
+
+.link-btn:hover i {
+  transform: scale(1.3);
 }
 a.link-btn:nth-child(1){animation-delay:.2s}
 a.link-btn:nth-child(2){animation-delay:.35s}
@@ -171,15 +230,16 @@ a.link-btn:hover {
 }
 a.link-btn:active {
   transform:translateY(4px);
-  box-shadow:0 6px 0 var(--maroon-dark),0 12px 18px #0002;
+  box-shadow:0 4px 0 var(--maroon-dark),0 12px 18px #0002;
 }
+
 
 /* ==== Footer Tooltip ==== */
 .footer {
   font-size:12px;color:#777;margin-top:26px;position:relative;display:inline-block;cursor:default;
 }
 .footer::after {
-  content:"Made with ⚡ by Unisanda";
+  content:"Made with Love by Unisanda";
   position:absolute;bottom:150%;left:50%;transform:translateX(-50%);
   background:#333;color:#fff;padding:6px 10px;
   border-radius:6px;font-size:12px;white-space:nowrap;
@@ -197,6 +257,32 @@ a.link-btn:active {
 @media (min-width:760px){
   .hero{padding-top:140px;padding-bottom:140px;}
 }
+
+/* ==== DARK MODE ==== */
+body.dark {
+  --paper: #121214;
+  --maroon: #f1d9dd;
+  --maroon-dark: #c6a1a9;
+  background: var(--paper);
+  color: #fff;
+}
+
+body.dark .hero {
+  background: linear-gradient(160deg, #2b0e12 0%, #431b22 100%);
+}
+
+body.dark a.link-btn {
+  background: linear-gradient(160deg, #431b22 0%, #2b0e12 100%);
+  box-shadow: 0 10px 0 #1b0609, 0 18px 24px #0003;
+}
+
+body.dark .footer::after {
+  background: #faf8f6;
+  color: #2b0e12;
+}
+
+body.dark .dark-toggle { background: #3338; color: #faf8f6; }
+
 </style>
 </head>
 <body>
@@ -205,6 +291,9 @@ a.link-btn:active {
 
 <!-- Hamburger + Drawer -->
 <div class="hamburger" id="hamburger"><span></span></div>
+
+<button id="darkToggle" class="dark-toggle" aria-label="Toggle dark mode">🌙</button>
+
 <nav class="drawer" id="drawer">
   <a href="https://unisanda.com" target="_blank">🏠 Home</a>
   <a href="https://unisanda.com/Reviews" target="_blank">⭐ Reviews</a>
@@ -216,36 +305,43 @@ a.link-btn:active {
   <div class="logo">
     <img src="https://unisanda.com/images/Logo.png" alt="Unisanda Logo">
   </div>
-  <p class="sub">Gaming content from news to reviews and more!</p>
 </header>
 
 <!-- Links -->
 <main>
   <h2>All My Links</h2>
   <div class="divider"></div>
-  <a class="link-btn" href="https://discord.com/invite/73e4kubpmB" target="_blank">DISCORD</a>
-  <a class="link-btn" href="https://www.tiktok.com/@iunisanda" target="_blank">TIKTOK</a>
-  <a class="link-btn" href="https://x.com/unimohdx" target="_blank">X</a>
-  <a class="link-btn" href="https://www.instagram.com/unisanda/" target="_blank">INSTAGRAM</a>
-  <a class="link-btn" href="https://www.twitch.tv/unimohd" target="_blank">TWITCH</a>
-  <a class="link-btn" href="https://steamcommunity.com/id/iimohd/" target="_blank">STEAM</a>
-  <a class="link-btn" href="https://tip.dokan.sa/iimohd" target="_blank">DONATE</a>
+  <a class="link-btn" href="https://discord.com/invite/73e4kubpmB" target="_blank">
+  <i class="fa-brands fa-discord"></i> DISCORD
+</a>
+
+<a class="link-btn" href="https://www.tiktok.com/@iunisanda" target="_blank">
+  <i class="fa-brands fa-tiktok"></i> TIKTOK
+</a>
+
+<a class="link-btn" href="https://x.com/unimohdx" target="_blank">
+  <i class="fa-brands fa-x-twitter"></i> X
+</a>
+
+<a class="link-btn" href="https://www.instagram.com/unisanda/" target="_blank">
+  <i class="fa-brands fa-instagram"></i> INSTAGRAM
+</a>
+
+<a class="link-btn" href="https://www.twitch.tv/unimohd" target="_blank">
+  <i class="fa-brands fa-twitch"></i> TWITCH
+</a>
+
+<a class="link-btn" href="https://steamcommunity.com/id/iimohd/" target="_blank">
+  <i class="fa-brands fa-steam"></i> STEAM
+</a>
+
+<a class="link-btn" href="https://tip.dokan.sa/iimohd" target="_blank">
+  <i class="fa-solid fa-hand-holding-dollar"></i> DONATE
+</a>
 
   <div class="divider"></div>
 
-  <!-- Twitter timeline -->
-  <div class="twitter-wrap">
-    <a class="twitter-timeline"
-       data-theme="light"
-       data-chrome="noheader nofooter transparent"
-       href="https://x.com/unimohdx?ref_src=twsrc%5Etfw">
-       Tweets by @unimohdx
-    </a>
-  </div>
-
-  <p class="footer">© Unisanda</p>
-</main>
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  
 
 <script>
 const hamburger=document.getElementById('hamburger');
@@ -259,6 +355,14 @@ function toggleDrawer(show){
 hamburger.onclick=()=>toggleDrawer(!drawer.classList.contains('open'));
 scrim.onclick=()=>toggleDrawer(false);
 document.onkeydown=e=>{if(e.key==='Escape')toggleDrawer(false)};
+</script>
+
+<script>
+const darkToggle = document.getElementById('darkToggle');
+darkToggle.addEventListener('click', () => {
+  document.body.classList.toggle('dark');
+  darkToggle.textContent = document.body.classList.contains('dark') ? '☀️' : '🌙';
+});
 </script>
 
 </body>
