--- a/Reviews/index.html
+++ b/Reviews/index.html
@@ -1,1 +1,62 @@
-UNDER عمل
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Unisanda | Reviews</title>
+  <link rel="icon" href="favicon.png" />
+  <link rel="stylesheet" href="Reviews/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
+</head>
+
+<body>
+  <!-- Header -->
+  <header class="hero">
+    <div class="logo">
+      <img src="images/logo.png" alt="Unisanda Logo" />
+    </div>
+    <h1 class="page-title">REVIEWS</h1>
+  </header>
+
+  <!-- Reviews Grid -->
+  <main class="reviews">
+    
+    <!-- Review Card 1 -->
+    <a href="https://yourlink1.com" target="_blank" class="review-box">
+      <div class="review-date">11 | DEC</div>
+      <img src="images/ashes-of-creation.jpg" alt="Ashes of Creation">
+      <div class="review-footer">
+        <i class="fa-brands fa-windows"></i>
+      </div>
+    </a>
+
+    <!-- Review Card 2 -->
+    <a href="https://yourlink2.com" target="_blank" class="review-box">
+      <div class="review-date">11 | DEC</div>
+      <img src="images/game-awards.jpg" alt="The Game Awards">
+      <div class="review-footer">
+        <i class="fa-brands fa-youtube"></i>
+      </div>
+    </a>
+
+    <!-- Review Card 3 -->
+    <a href="https://yourlink3.com" target="_blank" class="review-box">
+      <div class="review-date">12 | DEC</div>
+      <img src="images/terminator.jpg" alt="Terminator 2 No Fate">
+      <div class="review-footer">
+        <i class="fa-brands fa-playstation"></i>
+        <i class="fa-brands fa-xbox"></i>
+        <i class="fa-brands fa-windows"></i>
+      </div>
+    </a>
+
+    <!-- Add more cards below following same structure -->
+    
+  </main>
+
+  <footer class="footer">
+    <p>Made with ⚡ by Unisanda</p>
+  </footer>
+</body>
+</html>
