--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ darkToggle.addEventListener('click', () => {
 });
 </script>
 
-<link rel="stylesheet" href="./reviews/styles.css">
+<link rel="stylesheet" href="reviews/styles.css">
 
 </body>
 </html>
