--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ body.dark .dark-toggle { background: #3338; color: #faf8f6; }
 
 <nav class="drawer" id="drawer">
   <a href="https://unisanda.com" target="_blank">🏠 Home</a>
-  <a href="https://unisanda.com/reviews" target="_blank">⭐ reviews</a>
+  <a href="https://unisanda.com/reviews/reviews.html" target="_blank">⭐ Reviews</a>
 </nav>
 <div class="scrim" id="scrim"></div>
 
