--- a/reviews/reviews.html
+++ b/reviews/reviews.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <div class="bg"></div>
   <!-- Header -->
   <header class="hero">
     <div class="logo">
@@ -28,6 +29,7 @@
       <img src="images/ashes-of-creation.jpg" alt="Ashes of Creation">
       <div class="review-footer">
         <i class="fa-brands fa-windows"></i>
+        <i class="fa-brands fa-apple"></i>
       </div>
     </a>
 
@@ -37,6 +39,7 @@
       <img src="images/game-awards.jpg" alt="The Game Awards">
       <div class="review-footer">
         <i class="fa-brands fa-youtube"></i>
+        <i class="fa-brands fa-discord"></i>
       </div>
     </a>
 
