--- a/reviews/reviews.html
+++ b/reviews/reviews.html
@@ -13,12 +13,13 @@
 <body>
   <div class="bg"></div>
   <!-- Header -->
-  <header class="hero">
-    <div class="logo">
-      <img src="images/logo.png" alt="Unisanda Logo" />
-    </div>
-    <h1 class="page-title">REVIEWS</h1>
-  </header>
+  <!-- Floating Logo (no maroon background) -->
+<header class="logo-header">
+  <div class="logo">
+    <img src="https://unisanda.com/images/Logo.png" alt="Unisanda Logo">
+  </div>
+</header>
+
 
   <!-- Reviews Grid -->
   <main class="reviews">
