--- a/reviews/reviews.html
+++ b/reviews/reviews.html
@@ -27,7 +27,7 @@
     <!-- Review Card 1 -->
     <a href="https://yourlink1.com" target="_blank" class="review-box">
       <div class="review-date">11 | DEC</div>
-      <img src="https://unisanda.com/images/silk2" alt="Ashes of Creation">
+      <img src="https://unisanda.com/images/silk2.jpg" alt="Ashes of Creation">
       <div class="review-footer">
         <i class="fa-brands fa-windows"></i>
         <i class="fa-brands fa-apple"></i>
@@ -37,7 +37,7 @@
     <!-- Review Card 2 -->
     <a href="https://yourlink2.com" target="_blank" class="review-box">
       <div class="review-date">11 | DEC</div>
-      <img src="https://unisanda.com/images/silk2" alt="The Game Awards">
+      <img src="https://unisanda.com/images/silk2.jpg" alt="The Game Awards">
       <div class="review-footer">
         <i class="fa-brands fa-youtube"></i>
         <i class="fa-brands fa-discord"></i>
@@ -47,7 +47,7 @@
     <!-- Review Card 3 -->
     <a href="https://yourlink3.com" target="_blank" class="review-box">
       <div class="review-date">12 | DEC</div>
-      <img src="https://unisanda.com/images/silk2" alt="Terminator 2 No Fate">
+      <img src="https://unisanda.com/images/silk2.jpg" alt="Terminator 2 No Fate">
       <div class="review-footer">
         <i class="fa-brands fa-playstation"></i>
         <i class="fa-brands fa-xbox"></i>
